<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_signin_more"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_first"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dialog_signin_more_gesture"
        android:textColor="@color/gray_first"
        android:textSize="@dimen/signIn_textSize_16"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_second"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dialog_signin_more_switch_account"
        android:textColor="@color/gray_first"
        android:textSize="@dimen/signIn_textSize_16"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/common_cancel"
        android:textColor="@color/gray_second"
        android:textSize="@dimen/signIn_textSize_16" />
</LinearLayout>