<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_signin_more"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/dialog_log_off_confirmation"
        android:textColor="@color/gray_first"
        android:textSize="@dimen/me_text_size_16" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_editText_height"
        android:layout_marginEnd="@dimen/me_margin_first"
        android:layout_marginStart="@dimen/me_margin_first"
        android:layout_marginTop="26dp"
        android:background="@drawable/shape_red_fill"
        android:text="@string/common_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/me_text_size_16" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_editText_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/me_margin_first"
        android:layout_marginStart="@dimen/me_margin_first"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_blue_stroke"
        android:text="@string/common_cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/me_text_size_16" />
</LinearLayout>