<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".main.device.addDevice.wifi.AddDeviceScanQRActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_device_scan_tip"
            android:textColor="@color/gray_first"
            android:textSize="@dimen/signIn_textSize_16" />

        <ImageView
            android:id="@+id/iv_hint"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/ic_bind_scan" />

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/signIn_btn_height"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_signin_button"
            android:text="@string/add_device_scan_success"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/signIn_textSize_16" />

        <TextView
            android:id="@+id/tv_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:text="@string/add_device_try_sound"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/signIn_textSize_16" />
    </LinearLayout>

</LinearLayout>